--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -5,7 +5,8 @@
         <item android:id="@+id/menu1"
             android:title="@string/menu_1"
             android:icon="@drawable/ic_baseline_settings_24"
-            app:showAsAction="always"/>
+            app:showAsAction="always"
+            android:actionLayout="@layout/switch_layout"/>
         <item android:id="@+id/menu2"
             android:title="@string/menu_2"
             android:icon="@drawable/ic_favorite"
