--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -61,6 +61,22 @@
                 tools:text="@string/name" />
 
             <TextView
+                android:id="@+id/tv_detail_user_name"
+                style="@style/FontTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
+                tools:text="@string/username" />
+
+            <TextView
                 android:id="@+id/tv_detail_company"
                 style="@style/FontTextView"
                 android:layout_width="match_parent"
@@ -72,7 +88,7 @@
                 android:text="@string/company"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_detail_user_name" />
 
             <TextView
                 android:id="@+id/tv_detail_location"
